--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -2,12 +2,25 @@
 /* Header */
 /* -------------------------------------------------- */
 
+.hdr-cnt{
+    background-color: #ffffff;
+    height: 129px;
+}
+
+.srch-box{
+    border-radius: 1.25rem;
+    background-color: #000000;
+    opacity: 0.05;
+    color: #3d3d3d;
+    height: 46px;
+    width: 276px;
+}
 .hdr-logo {
     position: relative;
     display: inline-block;
     height: 60px;
     width: 160px;
-    background: url(/assets/Header/hdr-logo.svg) no-repeat 0 0;
+    background: url(/assets/Header/vault-logo.svg) no-repeat 0 0;
     background-size: 100%;
     cursor: pointer;
 }
@@ -16,27 +29,5 @@
     position: relative;
     top: 22px;
     margin-left: 70px;
-}
-
-.vrfy-cnt {
-    background-color: #ffe4c4;
-    color: #34343a;
-    border-radius: 6px;
-    margin-top: 10px;
-}
-
-.vrfy-icn {
-    position: relative;
-    display: inline-block;
-    height: 15px;
-    width: 27px;
-    background: url(/assets/Header/hdr-vrfy.svg) no-repeat 0 0;
-    background-size: 100%;
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-.vrfy-pdng {
-    padding: 5px;
 }
 
