material Ui components

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -1,3 +1,4 @@
+@import "../../../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
 @import "helpers.css";
 @import "desktop.css";
 @import "mobile.css";
