--- a/src/static/css/desktop.css
+++ b/src/static/css/desktop.css
@@ -177,3 +177,57 @@
     margin-top: 25px;
 }
 
+
+/* Token Chart */
+.piechart{
+    background-image: url("/assets/Vault/PieChart.png");
+    width: 100%;
+    height: 350px;
+    background-repeat: no-repeat;
+    background-size: 120%;
+}
+
+.sqrclrbx{
+    width: 50px;
+    height: 30px;
+    display: inline-block;
+    background-color: red;
+    border: 2px solid;
+}
+  
+.piechrtxt{
+    position: absolute;
+    margin: 5px 0 0 20px;
+}
+  
+.piechrtxtcnt{
+    margin-top: 3.5%
+}
+  
+.tknsltxt{
+    margin-top: 150px;
+}
+  
+.pieclr1{
+    background-color: #aedcff;
+}
+  
+.pieclr2{
+    background-color: #61b4ff;
+}
+  
+.pieclr3{
+    background-color: #228cff;
+}
+  
+.pieclr4{
+    background-color: #397396;
+}
+  
+.pieclr5{
+    background-color: #2c4856;
+}
+  
+.pieclr6{
+    background-color: #002838;
+}
