--- a/src/static/css/helpers.css
+++ b/src/static/css/helpers.css
@@ -50,6 +50,11 @@
 .push-top--50{
     margin-top: 50px !important
 }
+
+.push-top--35{
+    margin-top: 35px !important
+} 
+
 .push {
     margin: 20px !important;
 }
