aler modal and corrected the semantic tabs

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -48,6 +48,10 @@ a {
   color: #fff;
 }
 
+button:focus{
+  outline: none !important;
+}
+
 /* -------------------------------------------------- */
 /* Text Font Sizes */
 /* -------------------------------------------------- */
