--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -3,6 +3,7 @@
 @import "desktop.css";
 @import "mobile.css";
 @import "header.css";
+@import "loaderAnimation.css";
 
 @font-face {
   font-family: "Montserrat";
