--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -4,12 +4,23 @@
 @import "mobile.css";
 @import "header.css";
 @import "loaderAnimation.css";
+@import "uploadButton.css";
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
   src: local("Montserrat-Regular"), url(https://fonts.gstatic.com/s/montserrat/v7/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff) format("woff");
+}
+
+ *:before,
+ *:after {
+  box-sizing: border-box;
+ }
+
+html * {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -19,10 +30,21 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: #3d3d3d !important;
+  height: 100%;
+  position: relative;
 }
 
 * {
   outline: 0;
+  box-sizing: border-box;
+}
+
+.main-container{
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 215px; /* height of your footer */
 }
 
 a {
@@ -330,6 +352,12 @@ button:focus {
 /* -------------------------------------------------- */
 /* Text ellipsis */
 /* -------------------------------------------------- */
+
+.txt-ellipsis{
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .pttl {
   position: relative;
