--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -81,7 +81,7 @@ button{
 }
   
 button:hover{
-  box-shadow: 0px 10px 20px 0px rgba(76, 169, 252, 0.5) !important;
+  box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
   transform: translate(0px, -5px) !important;
   transition: 250ms; 
 }
@@ -572,6 +572,10 @@ button:focus {
 .card-brdr{
   border: 1.75px solid #EAEAEA !important;
   box-shadow: none !important;
+}
+
+.txt-no-wrp{
+  white-space: nowrap;
 }
 
 
