--- a/src/static/css/uploadButton.css
+++ b/src/static/css/uploadButton.css
@@ -1,7 +1,7 @@
 .upload-btn-wrapper {
-    position: relative;
+    /* position: relative;
     overflow: hidden;
-    display: inline-block;
+    display: inline-block; */
 }
   
 .upload-btn {
