--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -76,20 +76,26 @@ a:hover {
   text-decoration: none;
 }
 
+/* Button Override CSS */
 button {
-  transition: 250ms;
+  transition: 250ms ease-in-out;
 }
 
 button:hover {
   box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
   transform: translate(0px, -5px) !important;
-  transition: 250ms;
+  transition: 250ms ease-in-out;
 }
 
 button:active {
   background: #198bd1 !important;
   transition-timing-function: ease-in;
 }
+
+.btn:disabled{
+  background: #d3d3d3 !important;
+}
+/* End btn css */
 
 text {
   font-size: 16px !important;
@@ -579,6 +585,10 @@ button:focus {
 
 .txt-no-wrp {
   white-space: nowrap;
+}
+
+.dsbld-btn-bg{
+  background: #d3d3d3 !important;
 }
 
 /* -------------------------------------------------- */
