--- a/src/static/css/desktop.css
+++ b/src/static/css/desktop.css
@@ -251,7 +251,7 @@
 /* Docked Button on Registration page */
 
 .dckd-btn-cnt{
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: rgba(76, 169, 252, 0.25) 25px 5px 0px 0px;
     margin-bottom: 1px;
     background-color: #ffffff;
     position: fixed;
