--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -81,18 +81,50 @@ button {
   transition: 250ms ease-in-out;
 }
 
-button:hover {
+/* button:hover {
   box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
   transform: translate(0px, -5px) !important;
   transition: 250ms ease-in-out;
-}
+} */
 
-button:active {
+.bg--primary:active {
   background: #198bd1 !important;
   transition-timing-function: ease-in;
   transition: 250ms;
   transform: translate(0px, 5px) !important;
   box-shadow: none !important;
+}
+.bg--pending:active {
+  background: #d8931a !important;
+  transition-timing-function: ease-in;
+  transition: 250ms;
+  transform: translate(0px, 5px) !important;
+  box-shadow: none !important;
+}
+
+.bg--danger:active {
+  background: #c10a0a !important;
+  transition-timing-function: ease-in;
+  transition: 250ms;
+  transform: translate(0px, 5px) !important;
+  box-shadow: none !important;
+}
+
+.bg--primary:hover {
+  box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
+  transform: translate(0px, -5px) !important;
+  transition: 250ms ease-in-out;
+}
+.bg--pending:hover {
+  box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
+  transform: translate(0px, -5px) !important;
+  transition: 250ms ease-in-out;
+}
+
+.bg--danger:hover {
+  box-shadow: 0px 10px 20px 0px rgba(242, 51, 51, 0.5);
+  transform: translate(0px, -5px) !important;
+  transition: 250ms ease-in-out;
 }
 
 .btn:disabled {
@@ -592,6 +624,14 @@ button:focus {
 
 .dsbld-btn-bg {
   background: #d3d3d3 !important;
+}
+
+.btn-padding {
+  padding: 8px 16px;
+}
+
+input[type="file"] {
+  display: none;
 }
 
 /* -------------------------------------------------- */
