--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -14,11 +14,11 @@
 }
 
 @font-face {
-  font-family: "Product Sans";
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   src: local("Open Sans"), local("OpenSans"),
-    url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format("woff2");
+    url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format("woff2");
 }
 
 *:before,
@@ -31,7 +31,7 @@
 /* -------------------------------------------------- */
 
 .fnt-ps {
-  font-family: "Product Sans";
+  font-family: "Montserrat";
 }
 
 /* End */
