--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -214,6 +214,10 @@ button:focus {
   color: #ffffff !important;
 }
 
+.text--black {
+  color: black !important;
+}
+
 .text--primary {
   color: #3d3d3d;
 }
