--- a/src/static/css/desktop.css
+++ b/src/static/css/desktop.css
@@ -274,3 +274,12 @@
 #lnktag:hover {
   color: #4ca9fc !important;
 }
+
+#lnktag {
+  background: none !important;
+  color: inherit;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+  cursor: pointer;
+}
