--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -215,11 +215,11 @@ button:focus {
 }
 
 .text--danger {
-  color: #f23333;
+  color: #f23333 !important;
 }
 
 .text--secondary {
-  color: #4ca9fc;
+  color: #4ca9fc !important;
 }
 
 .txt-g-primary {
