--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -89,31 +89,36 @@ button:hover {
 button:active {
   transition-timing-function: ease-in;
   transition: 250ms;
-  transform: translate(0px, 5px) !important;
-  box-shadow: none !important;
-}
-
-.bg--primary:active {
-  background: #198bd1 !important;
-}
-.bg--pending:active {
-  background: #d8931a !important;
-}
-
-.bg--danger:active {
-  background: #c10a0a !important;
+  transform: translate(0px, 0px) !important;
+  
 }
 
 .bg--primary:hover {
   box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
 }
+
 .bg--pending:hover {
   box-shadow: 0px 10px 20px 0px hsla(38, 79%, 47%, 0.5) !important;
 }
 
 .bg--danger:hover {
-  box-shadow: 0px 10px 20px 0px rgba(242, 51, 51, 0.5);
+  box-shadow: 0px 10px 20px 0px rgba(242, 51, 51, 0.5) !important;
 }
+
+.bg--primary:active {
+  background: #198bd1 !important;
+  box-shadow: 0px 0px 0px #ffffff !important;
+}
+.bg--pending:active {
+  background: #d8931a !important;
+  box-shadow: 0px 0px 0px #ffffff !important;
+}
+
+.bg--danger:active {
+  background: #c10a0a !important;
+  box-shadow: 0px 0px 0px #ffffff !important;
+}
+
 
 .btn:disabled {
   background: #d3d3d3 !important;
