pickers and react select added

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -26,6 +26,9 @@
   box-sizing: border-box;
 }
 
+textarea {
+  line-height: 21px !important;
+}
 /* -------------------------------------------------- */
 /* Font Families */
 /* -------------------------------------------------- */
