--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -112,6 +112,17 @@ button:active {
   box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
 }
 
+.card-home:hover {
+  box-shadow: 0px 10px 20px 0px hsla(208, 97%, 64%, 0.5) !important;
+  transform: translate(0px, -5px) !important;
+  transition: 250ms ease-in-out;
+  cursor: pointer;
+}
+
+.card-home:active {
+  background: #198bd1 !important;
+  box-shadow: 0px 0px 0px #ffffff !important;
+}
 .bg--pending:hover {
   box-shadow: 0px 10px 20px 0px hsla(38, 79%, 47%, 0.5) !important;
 }
